[package]
name = "takeetoe"
version = "0.1.0"
authors = ["mimerme"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
log = "0.4.11"
# Might not need enumn
enumn = "0.1.3"
stoppable_thread = "0.2.1"
#stoppable_thread = {version="0.2.1", path="/home/mimerme/.cargo/registry/src/github.com-1ecc6299db9ec823/stoppable_thread-0.2.1/"}


# For observing filesystem events
#crossbeam-channel = "0.4.0"
#notify = "5.0.0-pre.3"

[[bin]]
name = "node"
path="src/takeetoe.rs"
